# sam3

./: .gitignore  LICENSE-APACHE-ATMEL  README.md  check.sh  cleanall.sh  make-pacs.sh
hal/: Cargo.toml  README.md  build.rs
hal/.cargo/: config.toml
hal/memory/: atsam3a4c.x  atsam3a8c.x  atsam3n00a.x  atsam3n00b.x  atsam3n0b.x  atsam3n1c.x  atsam3n2a.x  atsam3n4c.x  atsam3s1a.x  atsam3s2a.x  atsam3s4b.x  atsam3s8b.x  atsam3u1e.x  atsam3u2e.x  atsam3u4c.x  atsam3u4e.x  atsam3x8e.x  atsam3x8h.x
hal/src/: lib.rs  peripheral_id.rs  pmc.rs  structure.rs  write_protect.rs
hal/src/dacc/: cdr_data.rs  cdr_val.rs  dacc.rs  mod.rs
hal/src/pio/: dynpin.rs  filter.rs  interrupt.rs  mod.rs  peripheral.rs  pin.rs  pioa.rs  piob.rs  pioc.rs  piod.rs  pioe.rs  piof.rs  structure.rs
hal/src/pio/pins/: mod.rs
pac/atsam3n00b/: Cargo.toml
pac/atsam3n00b/src/: chipid.rs  dacc.rs  generic.rs  lib.rs  pmc.rs  rtt.rs  tc0.rs  twi1.rs  usart0.rs  usart1.rs
pac/atsam3n00b/src/adc/: cdr9.rs  emr.rs  idr.rs  lcdr.rs  mr.rs  over.rs
pac/atsam3n00b/src/dacc/: cr.rs  ier.rs  imr.rs  wpsr.rs
pac/atsam3n00b/src/gpbr/: gpbr5.rs
pac/atsam3n00b/src/matrix/: ccfg_sysio.rs  matrix_pras3.rs  matrix_scfg.rs
pac/atsam3n00b/src/pioa/: aimdr.rs  idr.rs  mdsr.rs  owdr.rs  pusr.rs  schmitt.rs
pac/atsam3n00b/src/piob/: aimer.rs  owsr.rs  ppdsr.rs  schmitt.rs
pac/atsam3n00b/src/pmc/: ckgr_mor.rs  pmc_fsmr.rs  pmc_fspr.rs  pmc_idr.rs  pmc_ier.rs  pmc_imr.rs  pmc_mckr.rs  pmc_pcdr0.rs  pmc_pcer0.rs  pmc_pck1.rs  pmc_scdr.rs  pmc_scsr.rs  pmc_sr.rs  pmc_wpmr.rs
pac/atsam3n00b/src/pwm/: ccnt0.rs  cdty1.rs  cmr3.rs  cprd0.rs  cprd2.rs  cprd3.rs  cupd2.rs  dis.rs  ena.rs  imr.rs  isr.rs  sr.rs
pac/atsam3n00b/src/rtc/: cr.rs  mr.rs  sccr.rs  timr.rs  wpmr.rs
pac/atsam3n00b/src/spi/: csr2.rs  idr.rs  ier.rs  rcr.rs  wpsr.rs
pac/atsam3n00b/src/supc/: cr.rs  wuir.rs
pac/atsam3n00b/src/tc0/: ccr1.rs  ier2.rs  qisr.rs  smmr0.rs  smmr1.rs  smmr2.rs  sr2.rs  waveform_mode_cmr0_waveform_mode.rs  waveform_mode_cmr1_waveform_mode.rs  waveform_mode_cmr2_waveform_mode.rs  wpmr.rs
pac/atsam3n00b/src/twi1/: idr.rs  ier.rs
pac/atsam3n00b/src/uart0/: mr.rs
pac/atsam3n00b/src/uart1/: imr.rs  sr.rs
pac/atsam3n00b/src/usart0/: idr.rs  ier.rs  if_.rs  mr.rs  spi_mode_imr_spi_mode.rs
pac/atsam3n00b/src/usart1/: csr.rs  idr.rs  imr.rs  thr.rs
pac/atsam3n2b/: Cargo.toml
pac/atsam3n2b/src/: lib.rs  matrix.rs  pmc.rs  spi.rs  usart1.rs  wdt.rs
pac/atsam3n2b/src/adc/: cdr1.rs  cdr2.rs  chsr.rs  isr.rs  mr.rs  seqr2.rs
pac/atsam3n2b/src/chipid/: cidr.rs
pac/atsam3n2b/src/dacc/: idr.rs  isr.rs  mr.rs  tncr.rs
pac/atsam3n2b/src/efc/: frr.rs
pac/atsam3n2b/src/matrix/: ccfg_sysio.rs  matrix_pras0.rs  matrix_pras1.rs  matrix_pras3.rs  matrix_scfg2.rs  matrix_scfg3.rs
pac/atsam3n2b/src/pioa/: scdr.rs
pac/atsam3n2b/src/piob/: frlhsr.rs  ier.rs  ifsr.rs  imr.rs  odsr.rs  oer.rs
pac/atsam3n2b/src/pmc/: ckgr_pllar.rs  pmc_fsmr.rs  pmc_ier.rs  pmc_pcdr0.rs  pmc_pck.rs  pmc_pck0.rs  pmc_pcsr0.rs  pmc_scsr.rs  pmc_wpsr.rs
pac/atsam3n2b/src/pwm/: ccnt1.rs  cdty1.rs  cdty2.rs  cmr1.rs  cmr2.rs  cupd0.rs  cupd3.rs  idr.rs  imr.rs  mr.rs
pac/atsam3n2b/src/rstc/: mr.rs
pac/atsam3n2b/src/rtc/: cr.rs
pac/atsam3n2b/src/spi/: idr.rs  rdr.rs
pac/atsam3n2b/src/supc/: wuir.rs  wumr.rs
pac/atsam3n2b/src/tc0/: bmr.rs  cmr0.rs  ra2.rs  rc1.rs  smmr2.rs  sr1.rs  waveform_mode_cmr0_waveform_mode.rs  waveform_mode_cmr2_waveform_mode.rs  wpmr.rs
pac/atsam3n2b/src/twi0/: cr.rs  cwgr.rs
pac/atsam3n2b/src/twi1/: mmr.rs
pac/atsam3n2b/src/uart0/: brgr.rs  mr.rs
pac/atsam3n2b/src/usart0/: cr.rs  idr.rs  imr.rs  mr.rs  rcr.rs  spi_mode_imr_spi_mode.rs  thr.rs
pac/atsam3n2b/src/usart1/: ier.rs  rtor.rs  spi_mode_ier_spi_mode.rs  thr.rs
pac/atsam3n2b/src/wdt/: cr.rs
pac/atsam3sd8c/: Cargo.toml
pac/atsam3sd8c/src/: adc.rs  efc.rs  gpbr.rs  hsmci.rs  lib.rs  matrix.rs  piob.rs  pioc.rs  pmc.rs  pwm.rs  rtc.rs  smc.rs  supc.rs  tc0.rs  tc1.rs  usart0.rs
pac/atsam3sd8c/src/acc/: acr.rs  ier.rs  isr.rs  mr.rs  wpsr.rs
pac/atsam3sd8c/src/adc/: cdr.rs  cdr11.rs  cdr12.rs  cgr.rs  cr.rs  emr.rs  idr.rs  ier.rs  imr.rs  isr.rs  mr.rs  seqr1.rs  seqr2.rs
pac/atsam3sd8c/src/chipid/: cidr.rs
pac/atsam3sd8c/src/crccu/: cr.rs  dma_dis.rs  dma_en.rs  dma_idr.rs  dma_ier.rs  dma_isr.rs  dma_sr.rs  idr.rs  ier.rs  sr.rs
pac/atsam3sd8c/src/dacc/: chdr.rs  idr.rs  isr.rs  mr.rs
pac/atsam3sd8c/src/gpbr/: gpbr.rs
pac/atsam3sd8c/src/hsmci/: blkr.rs  cfg.rs  cmdr.rs  cstor.rs  dtor.rs  fifo10.rs  fifo108.rs  fifo109.rs  fifo111.rs  fifo112.rs  fifo114.rs  fifo118.rs  fifo119.rs  fifo12.rs  fifo122.rs  fifo123.rs  fifo124.rs  fifo129.rs  fifo131.rs  fifo134.rs  fifo135.rs  fifo138.rs  fifo139.rs  fifo141.rs  fifo143.rs  fifo145.rs  fifo146.rs  fifo147.rs  fifo15.rs  fifo151.rs  fifo153.rs  fifo155.rs  fifo156.rs  fifo157.rs  fifo158.rs  fifo162.rs  fifo167.rs  fifo169.rs  fifo172.rs  fifo173.rs  (+85 more)
pac/atsam3sd8c/src/matrix/: ccfg_sysio.rs  matrix_mcfg3.rs  matrix_pras0.rs  matrix_pras1.rs  matrix_pras2.rs  matrix_pras3.rs  matrix_pras4.rs
pac/atsam3sd8c/src/pioa/: abcdsr0.rs  pcidr.rs
pac/atsam3sd8c/src/piob/: abcdsr0.rs  aimmr.rs  imr.rs  lsr.rs  owdr.rs  pcidr.rs  pcimr.rs  pcisr.rs  pcmr.rs  ppder.rs  psr.rs  pudr.rs  pusr.rs  schmitt.rs
pac/atsam3sd8c/src/pioc/: aimdr.rs  ifscdr.rs  odsr.rs  pcier.rs  pcisr.rs  pcmr.rs  pcrhr.rs
pac/atsam3sd8c/src/pmc/: ckgr_mcfr.rs  ckgr_mor.rs  ckgr_pllbr.rs  pmc_fsmr.rs  pmc_fspr.rs  pmc_idr.rs  pmc_ier.rs  pmc_imr.rs  pmc_ocr.rs  pmc_pcdr0.rs  pmc_pcer0.rs  pmc_pcer1.rs  pmc_pck0.rs  pmc_pck1.rs  pmc_pck2.rs  pmc_pcsr0.rs  pmc_scdr.rs  pmc_scer.rs  pmc_sr.rs  pmc_wpsr.rs
pac/atsam3sd8c/src/pwm/: ccnt0.rs  cdty3.rs  cdtyupd2.rs  clk.rs  cmpm5.rs  cmpm6.rs  cmpmupd3.rs  cmpmupd5.rs  cmpv0.rs  cmpv6.rs  cmpv7.rs  cmpvupd4.rs  cmpvupd5.rs  cmr0.rs  cprd2.rs  cprdupd2.rs  cprdupd3.rs  dt1.rs  dtupd1.rs  (+8 more)
pac/atsam3u4c/: Cargo.toml  device.x
pac/atsam3u4c/src/: adc12b.rs  chipid.rs  dmac.rs  efc1.rs  hsmci.rs  lib.rs  matrix.rs  pmc.rs  pwm.rs  smc.rs  tc0.rs  udphs.rs
(+11080 files in other folders)
