[package]
name = "sam3-hal"
version = "0.1.0"
authors = [
    "Aurorans Solis <primalucegd@gmail.com>",
]
description = "HAL and PAC API for SAM3A, SAM3N, SAM3S, SAM3U, and SAM3X microcontrollers."
keywords = ["no-std", "arm", "cortex-m3", "embedded-hal"]
license = "EUPL-1.2"
repository = "https://github.com/AuroransSolis/sam3"
readme = "README.md"
# documentation = ""
edition = "2021"

# [package.metadata.docs.rs]
# features = []

[dependencies]

# It may be useful in the future to add in extra features to group together smaller groups of MCUs,
# for instance adding the feature `sam3n2` to group together `sam3n2a`, `sam3n2b`, and `sam3n2c` so
# that common functionality between them is gated behind only a single feature.
[features]
unproven = []

device = []

sam3a = ["device"]
sam3a4c = ["atsam3a4c", "sam3a"]
sam3a4c-rt = ["sam3a4c", "atsam3a4c/rt"]
sam3a8c = ["atsam3a8c", "sam3a"]
sam3a8c-rt = ["sam3a8c", "atsam3a8c/rt"]

sam3n = ["device"]
sam3n00a = ["atsam3n00a", "sam3n"]
sam3n00a-rt = ["sam3n00a", "atsam3n00a/rt"]
sam3n00b = ["atsam3n00b", "sam3n"]
sam3n00b-rt = ["sam3n00b", "atsam3n00b/rt"]
sam3n0a = ["atsam3n0a", "sam3n"]
sam3n0a-rt = ["sam3n0a", "atsam3n0a/rt"]
sam3n0b = ["atsam3n0b", "sam3n"]
sam3n0b-rt = ["sam3n0b", "atsam3n0b/rt"]
sam3n0c = ["atsam3n0c", "sam3n"]
sam3n0c-rt = ["sam3n0c", "atsam3n0c/rt"]
sam3n1a = ["atsam3n1a", "sam3n"]
sam3n1a-rt = ["sam3n1a", "atsam3n1a/rt"]
sam3n1b = ["atsam3n1b", "sam3n"]
sam3n1b-rt = ["sam3n1b", "atsam3n1b/rt"]
sam3n1c = ["atsam3n1c", "sam3n"]
sam3n1c-rt = ["sam3n1c", "atsam3n1c/rt"]
sam3n2a = ["atsam3n2a", "sam3n"]
sam3n2a-rt = ["sam3n2a", "atsam3n2a/rt"]
sam3n2b = ["atsam3n2b", "sam3n"]
sam3n2b-rt = ["sam3n2b", "atsam3n2b/rt"]
sam3n2c = ["atsam3n2c", "sam3n"]
sam3n2c-rt = ["sam3n2c", "atsam3n2c/rt"]
sam3n4a = ["atsam3n4a", "sam3n"]
sam3n4a-rt = ["sam3n4a", "atsam3n4a/rt"]
sam3n4b = ["atsam3n4b", "sam3n"]
sam3n4b-rt = ["sam3n4b", "atsam3n4b/rt"]
sam3n4c = ["atsam3n4c", "sam3n"]
sam3n4c-rt = ["sam3n4c", "atsam3n4c/rt"]

sam3s = ["device"]
sam3s1a = ["atsam3s1a", "sam3s"]
sam3s1a-rt = ["sam3s1a", "atsam3s1a/rt"]
sam3s1b = ["atsam3s1b", "sam3s"]
sam3s1b-rt = ["sam3s1b", "atsam3s1b/rt"]
sam3s1c = ["atsam3s1c", "sam3s"]
sam3s1c-rt = ["sam3s1c", "atsam3s1c/rt"]
sam3s2a = ["atsam3s2a", "sam3s"]
sam3s2a-rt = ["sam3s2a", "atsam3s2a/rt"]
sam3s2b = ["atsam3s2b", "sam3s"]
sam3s2b-rt = ["sam3s2b", "atsam3s2b/rt"]
sam3s2c = ["atsam3s2c", "sam3s"]
sam3s2c-rt = ["sam3s2c", "atsam3s2c/rt"]
sam3s4a = ["atsam3s4a", "sam3s"]
sam3s4a-rt = ["sam3s4a", "atsam3s4a/rt"]
sam3s4b = ["atsam3s4b", "sam3s"]
sam3s4b-rt = ["sam3s4b", "atsam3s4b/rt"]
sam3s4c = ["atsam3s4c", "sam3s"]
sam3s4c-rt = ["sam3s4c", "atsam3s4c/rt"]
sam3s8b = ["atsam3s8b", "sam3s"]
sam3s8b-rt = ["sam3s8b", "atsam3s8b/rt"]
sam3s8c = ["atsam3s8c", "sam3s"]
sam3s8c-rt = ["sam3s8c", "atsam3s8c/rt"]
sam3sd8b = ["atsam3sd8b", "sam3s"]
sam3sd8b-rt = ["sam3sd8b", "atsam3sd8b/rt"]
sam3sd8c = ["atsam3sd8c", "sam3s"]
sam3sd8c-rt = ["sam3sd8c", "atsam3sd8c/rt"]

sam3u = ["device"]
sam3u1c = ["atsam3u1c", "sam3u"]
sam3u1c-rt = ["sam3u1c", "atsam3u1c/rt"]
sam3u1e = ["atsam3u1e", "sam3u"]
sam3u1e-rt = ["sam3u1e", "atsam3u1e/rt"]
sam3u2c = ["atsam3u2c", "sam3u"]
sam3u2c-rt = ["sam3u2c", "atsam3u2c/rt"]
sam3u2e = ["atsam3u2e", "sam3u"]
sam3u2e-rt = ["sam3u2e", "atsam3u2e/rt"]
sam3u4c = ["atsam3u4c", "sam3u"]
sam3u4c-rt = ["sam3u4c", "atsam3u4c/rt"]
sam3u4e = ["atsam3u4e", "sam3u"]
sam3u4e-rt = ["sam3u4e", "atsam3u4e/rt"]

# The ATSAM3X8H chip is not commercially available - it's only mounted on the SAM3X-EK evaluation
# kit, but I'm still including it for the sake of completeness.
sam3x = ["device"]
sam3x4c = ["atsam3x4c", "sam3x"]
sam3x4c-rt = ["sam3x4c", "atsam3x4c/rt"]
sam3x4e = ["atsam3x4e", "sam3x"]
sam3x4e-rt = ["sam3x4e", "atsam3x4e/rt"]
sam3x8c = ["atsam3x8c", "sam3x"]
sam3x8c-rt = ["sam3x8c", "atsam3x8c/rt"]
sam3x8e = ["atsam3x8e", "sam3x"]
sam3x8e-rt = ["sam3x8e", "atsam3x8e/rt"]
sam3x8h = ["atsam3x8h", "sam3x"]
sam3x8h-rt = ["sam3x8h", "atsam3x8h/rt"]

[dependencies.atsam3a4c]
path = "../pac/atsam3a4c/"
version = "0.1.0"
optional = true

[dependencies.atsam3a8c]
path = "../pac/atsam3a8c/"
version = "0.1.0"
optional = true

[dependencies.atsam3n0a]
path = "../pac/atsam3n0a/"
version = "0.1.0"
optional = true

[dependencies.atsam3n0b]
path = "../pac/atsam3n0b/"
version = "0.1.0"
optional = true

[dependencies.atsam3n0c]
path = "../pac/atsam3n0c/"
version = "0.1.0"
optional = true

[dependencies.atsam3n00a]
path = "../pac/atsam3n00a/"
version = "0.1.0"
optional = true

[dependencies.atsam3n00b]
path = "../pac/atsam3n00b/"
version = "0.1.0"
optional = true

[dependencies.atsam3n1a]
path = "../pac/atsam3n1a/"
version = "0.1.0"
optional = true

[dependencies.atsam3n1b]
path = "../pac/atsam3n1b/"
version = "0.1.0"
optional = true

[dependencies.atsam3n1c]
path = "../pac/atsam3n1c/"
version = "0.1.0"
optional = true

[dependencies.atsam3n2a]
path = "../pac/atsam3n2a/"
version = "0.1.0"
optional = true

[dependencies.atsam3n2b]
path = "../pac/atsam3n2b/"
version = "0.1.0"
optional = true

[dependencies.atsam3n2c]
path = "../pac/atsam3n2c/"
version = "0.1.0"
optional = true

[dependencies.atsam3n4a]
path = "../pac/atsam3n4a/"
version = "0.1.0"
optional = true

[dependencies.atsam3n4b]
path = "../pac/atsam3n4b/"
version = "0.1.0"
optional = true

[dependencies.atsam3n4c]
path = "../pac/atsam3n4c/"
version = "0.1.0"
optional = true

[dependencies.atsam3s1a]
path = "../pac/atsam3s1a/"
version = "0.1.0"
optional = true

[dependencies.atsam3s1b]
path = "../pac/atsam3s1b/"
version = "0.1.0"
optional = true

[dependencies.atsam3s1c]
path = "../pac/atsam3s1c/"
version = "0.1.0"
optional = true

[dependencies.atsam3s2a]
path = "../pac/atsam3s2a/"
version = "0.1.0"
optional = true

[dependencies.atsam3s2b]
path = "../pac/atsam3s2b/"
version = "0.1.0"
optional = true

[dependencies.atsam3s2c]
path = "../pac/atsam3s2c/"
version = "0.1.0"
optional = true

[dependencies.atsam3s4a]
path = "../pac/atsam3s4a/"
version = "0.1.0"
optional = true

[dependencies.atsam3s4b]
path = "../pac/atsam3s4b/"
version = "0.1.0"
optional = true

[dependencies.atsam3s4c]
path = "../pac/atsam3s4c/"
version = "0.1.0"
optional = true

[dependencies.atsam3s8b]
path = "../pac/atsam3s8b/"
version = "0.1.0"
optional = true

[dependencies.atsam3s8c]
path = "../pac/atsam3s8c/"
version = "0.1.0"
optional = true

[dependencies.atsam3sd8b]
path = "../pac/atsam3sd8b/"
version = "0.1.0"
optional = true

[dependencies.atsam3sd8c]
path = "../pac/atsam3sd8c/"
version = "0.1.0"
optional = true

[dependencies.atsam3u1c]
path = "../pac/atsam3u1c/"
version = "0.1.0"
optional = true

[dependencies.atsam3u1e]
path = "../pac/atsam3u1e/"
version = "0.1.0"
optional = true

[dependencies.atsam3u2c]
path = "../pac/atsam3u2c/"
version = "0.1.0"
optional = true

[dependencies.atsam3u2e]
path = "../pac/atsam3u2e/"
version = "0.1.0"
optional = true

[dependencies.atsam3u4c]
path = "../pac/atsam3u4c/"
version = "0.1.0"
optional = true

[dependencies.atsam3u4e]
path = "../pac/atsam3u4e/"
version = "0.1.0"
optional = true

[dependencies.atsam3x4c]
path = "../pac/atsam3x4c/"
version = "0.1.0"
optional = true

[dependencies.atsam3x4e]
path = "../pac/atsam3x4e/"
version = "0.1.0"
optional = true

[dependencies.atsam3x8c]
path = "../pac/atsam3x8c/"
version = "0.1.0"
optional = true

[dependencies.atsam3x8e]
path = "../pac/atsam3x8e/"
version = "0.1.0"
optional = true

[dependencies.atsam3x8h]
path = "../pac/atsam3x8h/"
version = "0.1.0"
optional = true
