[package]
name = "atsam3n2b"
description = "Peripheral access API for ATSAM3N2B microcontrollers (generated using svd2rust)"
version = "0.1.0"
authors = ["Aurorans Solis <primalucegd@gmail.com>"]
keywords = ["no-std", "arm", "cortex-m"]
categories = ["embedded", "hardware-support", "no-std"]
license = "EUPL-1.2"
repository = "https://github.com/AuroransSolis/sam3"
readme = "README.md"
edition = "2021"

[dependencies]
vcell = "0.1"
derive_more = "0.99.17"

[dependencies.cortex-m]
version = "0.7"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.critical-section]
version	= "1.0"
optional = true

[features]
rt = ["cortex-m-rt/device"]
